exercises_page/exercises_page.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap');

* {
	margin: 0;
	padding: 0;
}

body {
	display: flex; /*?*/
	flex-flow: column nowrap; /*?*/
	justify-content: center;
	font-family: "IBM Plex Sans", sans-serif;
	background: linear-gradient(135deg, #194261, #0C2233);
	background-attachment: fixed;
  	font-optical-sizing: auto;
  	font-weight: 500;
	font-size: 14px;
  	font-style: normal;
	width: 100%;
	min-height: 100vh;
}

a {
	text-decoration: none;

	&:visited {
		color: #ffffff;
	}

	&:hover {
		color: #FFC045;
		transition: color 0.2s;
	}
}

nav {
	display: flex;
	flex-flow: row nowrap;
	position: absolute;
	top: calc(21*100%/1000);
	left: calc(41*100%/1920);
	right: calc(41*100%/1920);
	width: calc(1856*100%/1920);
	height: 77px;
	box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.75);
	border-radius: 10px;
	
}

.logo-section {
	display: flex;
	height: auto;
	width: calc(159*100%/1920);
	background-color: #0A91AB;
	border-radius: 10px 0px 0px 10px;
	justify-content: center;
	align-items: center;

	& img {
		width: 75%;
		height: 75%;
	}
}

.navigation-section {
	background-color: #065471;
	border-radius: 0px 10px 10px 0px;
	width: 100%;

	& ul {
		height: 100%;	
		display: flex;
		flex-flow: row nowrap;
		list-style: none;
		padding-left: calc(40*100%/1920);
		padding-right: calc(40*100%/1920);
		justify-content: space-between;
		align-items: center;

		& li {
			color: #ffffff;
			font-size: 1.5em;
			font-weight: 600;
		}
	}

	& img {
		width: 55px;
		height: 55px;
		border-radius: 90px;
		box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.75);
	}
}

main {
	width: calc(1856*100%/1920);
	height: calc(790*100%/1000);
	overflow: scroll;
	position: absolute;
	top: calc(171*100%/1000);
	left: calc(41*100%/1920);
	right: calc(41*100%/1920);
	overflow-x: hidden;

	&::-webkit-scrollbar {
		width: 15px;
	}

	&::-webkit-scrollbar-thumb {
		background-color: #D9D9D9;
		border-radius: 10px;
	}

	&::-webkit-scrollbar-track {
		background-color: transparent;
	}

	&::-webkit-scrollbar-button:single-button:decrement {
		background-color: transparent;
		border-left: 7px solid transparent;
  		border-right: 7px solid transparent;
  		border-bottom: 10px solid #0A91AB;
		border-radius: 7px;
 		height: 10px;
		cursor: pointer;
	}

	&::-webkit-scrollbar-button:single-button:increment {
		background-color: transparent;
		border-left: 7px solid transparent;
  		border-right: 7px solid transparent;
  		border-top: 10px solid #0A91AB;
		border-radius: 7px;
 		height: 10px;
		cursor: pointer;
	}
}

.exercises {
	width: calc(1741*100%/1920);
	height: calc(790*100%/1000);
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
	grid-auto-rows: 1fr;
	gap: calc(70*100%/1000) calc(133*100%/1000);


	& .exercise {
		display: flex;
		flex-direction: column;
		gap: 10px;
		
		&:hover {
			opacity: 0.8;
			transition: opacity 0.2s;
		}

		& a img {
			width: 100%;
			object-fit: cover;
			border-radius: 22px;
		}
	}
}

